--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,285 +1,319 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap'); /* Common Reset Styles */
+/* Common Reset Styles */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
 :root {
-  --primary-color: #000000;    /* Black */
-  --secondary-color: #000000B2; /* 70% */
-  --third-color: #00000099;   /* 60% */
-  --fourth-color: #00000066;   /* 40% */   
-  --background-color: #f1f1f1; /* Light Gray */
-  --heading-color: #1d1d1d;    /* Almost Black */
-  --border-color: #dddddd;     /* Light Border */
+	--primary-color: #000000;
+	/* Black */
+	--secondary-color: #000000B2;
+	/* 70% */
+	--third-color: #00000099;
+	/* 60% */
+	--fourth-color: #00000066;
+	/* 40% */
+	--background-color: #f1f1f1;
+	/* Light Gray */
+	--heading-color: #1d1d1d;
+	/* Almost Black */
+	--border-color: #dddddd;
+	/* Light Border */
 }
 
-html, body {
-    height: 100%;
-    font-size: 100%;
-    line-height: 1.6;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-    font-family: Inter;
+html,
+body {
+	height: 100%;
+	font-size: 100%;
+	line-height: 1.6;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-family: Inter;
 }
 
 .inter-<uniquifier> {
-  font-family: "Inter", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: <weight>;
-  font-style: normal;
+	font-family: "Inter", sans-serif;
+	font-optical-sizing: auto;
+	font-weight: <weight>;
+	font-style: normal;
 }
 
-ul, ol {
-    list-style: none;
+ul,
+ol {
+	list-style: none;
 }
 
 a {
-    text-decoration: none;
-    color: inherit;
+	text-decoration: none;
+	color: inherit;
 }
 
-*, *::before, *::after {
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+	box-sizing: border-box;
 }
 
-h1, h2, h3, h4, h5, h6 {
-    margin: 0;
-    padding: 0;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+	margin: 0;
+	padding: 0;
 }
 
 p {
-    margin: 0;
-    padding: 0;
+	margin: 0;
+	padding: 0;
 }
 
 table {
-    border-collapse: collapse;
-    border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
 /* Image resets */
 img {
-    max-width: 100%;
-    display: block;
-    height: auto;
+	max-width: 100%;
+	display: block;
+	height: auto;
 }
 
 button {
-    background: none;
-    border: none;
-    padding: 0;
-    cursor: pointer;
+	background: none;
+	border: none;
+	padding: 0;
+	cursor: pointer;
 }
 
-input, textarea {
-    margin: 0;
-    padding: 0;
-    border: none;
+input,
+textarea {
+	margin: 0;
+	padding: 0;
+	border: none;
 }
 
-.xfolio-header, .xfolio-footer {
-    max-width: 840px;
-    margin: 0 auto;
-    text-align: center;
-  }
-
-  .xfolio-header{
-    border: 1px solid #ddd;
-    padding: 10px 20px;
-    border-radius: 48px;
-  }
-  
-  .main-wrapper {
-    max-width: 700px;
-    margin: 20px auto;
-  }
-
-  .xfolio-flex{
-    display: flex;
-    justify-content: space-between;
-
-  }
-  
-  .exfolio-main-menu ul {
-    
-  }
-  .exfolio-main-menu ul li {
-    display: inline-block;
-    margin-right: 30px;
-    position: relative;
-  }
-  .exfolio-main-menu ul li:last-child{
-    margin-right: 0;
-  }
-
-  .exfolio-main-menu ul li:not(:last-child)::after{
-    content: '';
-    position: absolute;
-    background: #0000004D;
-    width: 4px;
-    height: 4px;
-    border-radius: 50%;
-    top: 10px;
-    right: -20px;
-    
-  }
-
-  /* POST STYLES */
-
-  .xfolio-posts{
-    margin-top: 30px;
-    margin-bottom: 60px;
-  }
-
-  h2.xfolio-post-title{
-    font-weight: 400;
-    font-size: 24px;
-    line-height: 34px;
-    color: #000;
-    margin-top: 10px;
-  }
-  h1.xfolio-single-post-title{
-    font-weight: 400;
-    font-size: 40px;
-    line-height: 48px;
-    color: #000;
-    margin-top: 10px;
-    margin-bottom: 40px;
-    display: block;
-  }
-.xfolio-post-date{
-  font-size: 14px;
-  font-weight: 400;
-  color: var(--third-color);
-}
-  .xfolio-post-details{
-    margin: 60px 0;
-  }
-  .xfolio-entry-content{
-    font-size: 18px;
-    color: var(--primary-color);
-  }
-  .xfolio-post-thumbnail{
-    margin: 30px 0;
-  }
-
-  .xfolio-social-share {
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 20px;
-
-    /* Position the social icons on the left side */
-    position: fixed;
-    top: 50%;
-    left: 18%;
-    transform: translateY(-50%); /* Center the icons vertically */
-}
-  .xfolio-social-share span{
-    font-size: 10px;
-    text-transform: uppercase;
-    color: var(--fourth-color);
-    font-weight: 500;
-  }
-  .xfolio-social-share a{}
-  .xfolio-social-share a img{
-    width: 16px;
-  }
-
-  .xfolio-page-title{
-    font-size: 64px;
-    color: var(--primary-color);
-    font-weight: 400;
-    margin-top: 50px;
-    margin-bottom: 20px;
-    display: block;
-  }
-
-  /* Footer Styles */
-.xfolio-footer{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  flex-wrap: wrap;
-  padding: 40px 0;
-  border-top: 1px solid #000;
-}
-.contact-info a{
-  font-weight: 400;
-  font-size: 18px;
-  color: var(--primary-color);
-}
-.xfolio-footer-social-share{}
-.xfolio-footer-social-share ul{
-  display: flex;
-  gap: 15px;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
-}
-.xfolio-footer-social-share ul li{
-  
-}
-.xfolio-footer-social-share ul li a{
-  display: block;
+.xfolio-header,
+.xfolio-footer {
+	max-width: 840px;
+	margin: 0 auto;
+	text-align: center;
 }
 
-.xfolio-footer-social-share ul li a img{
-  width: 16px;
+.xfolio-header {
+	border: 1px solid #ddd;
+	padding: 10px 20px;
+	border-radius: 48px;
+}
+
+.main-wrapper {
+	max-width: 700px;
+	margin: 20px auto;
+}
+
+.xfolio-flex {
+	display: flex;
+	justify-content: space-between;
+
+}
+
+.exfolio-main-menu ul {}
+
+.exfolio-main-menu ul li {
+	display: inline-block;
+	margin-right: 30px;
+	position: relative;
+}
+
+.exfolio-main-menu ul li:last-child {
+	margin-right: 0;
+}
+
+.exfolio-main-menu ul li:not(:last-child)::after {
+	content: '';
+	position: absolute;
+	background: #0000004D;
+	width: 4px;
+	height: 4px;
+	border-radius: 50%;
+	top: 10px;
+	right: -20px;
+
+}
+
+/* POST STYLES */
+
+.xfolio-posts {
+	margin-top: 30px;
+	margin-bottom: 60px;
+}
+
+h2.xfolio-post-title {
+	font-weight: 400;
+	font-size: 24px;
+	line-height: 34px;
+	color: #000;
+	margin-top: 10px;
+}
+
+h1.xfolio-single-post-title {
+	font-weight: 400;
+	font-size: 40px;
+	line-height: 48px;
+	color: #000;
+	margin-top: 10px;
+	margin-bottom: 40px;
+	display: block;
+}
+
+.xfolio-post-date {
+	font-size: 14px;
+	font-weight: 400;
+	color: var(--third-color);
+}
+
+.xfolio-post-details {
+	margin: 60px 0;
+}
+
+.xfolio-entry-content {
+	font-size: 18px;
+	color: var(--primary-color);
+}
+
+.xfolio-post-thumbnail {
+	margin: 30px 0;
+}
+
+.xfolio-social-share {
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 20px;
+
+	/* Position the social icons on the left side */
+	position: fixed;
+	top: 50%;
+	left: 18%;
+	transform: translateY(-50%);
+	/* Center the icons vertically */
+}
+
+.xfolio-social-share span {
+	font-size: 10px;
+	text-transform: uppercase;
+	color: var(--fourth-color);
+	font-weight: 500;
+}
+
+.xfolio-social-share a {}
+
+.xfolio-social-share a img {
+	width: 16px;
+}
+
+.xfolio-page-title {
+	font-size: 64px;
+	color: var(--primary-color);
+	font-weight: 400;
+	margin-top: 50px;
+	margin-bottom: 20px;
+	display: block;
+}
+
+/* Footer Styles */
+.xfolio-footer {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	flex-wrap: wrap;
+	padding: 40px 0;
+	border-top: 1px solid #000;
+}
+
+.contact-info a {
+	font-weight: 400;
+	font-size: 18px;
+	color: var(--primary-color);
+}
+
+.xfolio-footer-social-share {}
+
+.xfolio-footer-social-share ul {
+	display: flex;
+	gap: 15px;
+	justify-content: center;
+	align-items: center;
+	flex-wrap: wrap;
+}
+
+.xfolio-footer-social-share ul li {}
+
+.xfolio-footer-social-share ul li a {
+	display: block;
+}
+
+.xfolio-footer-social-share ul li a img {
+	width: 16px;
 }
 
 /* HOME PAGE STYLES */
 .welcome-text {
-  margin-top: 80px;
+	margin-top: 80px;
 }
-.welcome-text > h3{
-  font-size: 80px;
-  font-weight: 300;
-  line-height: 96px;
-  color: #0000001A;
-  text-transform: uppercase;
-  margin-left: -5px;
+
+.welcome-text>h3 {
+	font-size: 80px;
+	font-weight: 300;
+	line-height: 96px;
+	color: #0000001A;
+	text-transform: uppercase;
+	margin-left: -5px;
 }
-.welcome-text > h1{
-  font-size: 168px;
-  font-weight: 300;
-  color: #000000;
-  text-transform: uppercase;
-  margin-top: -60px !important;
-  margin-left: -13px !important;
-  box-sizing: border-box !important;
-  
+
+.welcome-text>h1 {
+	font-size: 168px;
+	font-weight: 300;
+	color: #000000;
+	text-transform: uppercase;
+	margin-top: -60px !important;
+	margin-left: -13px !important;
+	box-sizing: border-box !important;
+
 }
 
 .welcome-text h4 {
-  font-size: 34px;
-  font-weight: 400;
-  color: #000000CC;
-  line-height: 40px;
-  margin-top: -40px;
-}
-.welcome-description p{
-  font-size: 20px;
-  line-height: 32px;
-  color: #000000CC;
-  margin-top: 100px;
-  max-width: 660px;
+	font-size: 34px;
+	font-weight: 400;
+	color: #000000CC;
+	line-height: 40px;
+	margin-top: -40px;
 }
 
-.contact-mail{
-  padding-top: 40px;
-  padding-bottom: 60px;
+.welcome-description p {
+	font-size: 20px;
+	line-height: 32px;
+	color: #000000CC;
+	margin-top: 100px;
+	max-width: 660px;
 }
+
+.contact-mail {
+	padding-top: 40px;
+	padding-bottom: 60px;
+}
+
 .contact-mail p a {
-  display: block;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: 21px;
-  color: var(--primary-color);
+	display: block;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 21px;
+	color: var(--primary-color);
 }
-
