xfolio experiences added

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,6 +109,7 @@ textarea {
 	border: 1px solid #ddd;
 	padding: 10px 20px;
 	border-radius: 48px;
+  margin-top: 20px;
 }
 
 .main-wrapper {
@@ -316,4 +317,72 @@ h1.xfolio-single-post-title {
 	font-weight: 400;
 	line-height: 21px;
 	color: var(--primary-color);
+}
+
+
+/* ABOUT PAGE STYLES */
+
+.xfolio-about-intro{
+  display: flex;
+  gap: 40px;
+  align-items: center;
+}
+
+.about-image img {
+  max-width: 180px;
+}
+.about-text h1 {
+  text-transform: uppercase;
+  font-size: 80px;
+  font-weight: 400;
+  line-height: 80px;
+}
+.about-text h4 {
+  text-transform: capitalize;
+  font-size: 24px;
+  font-weight: 400;
+  line-height: 29px;
+  color: var(--secondary-color);
+  margin-left: 4px;
+  margin-top: 10px;
+}
+
+.about-description p {
+  font-size: 20px;
+  line-height: 32px;
+  color: var(--secondary-color);
+  margin-top: 80px;
+  max-width: 660px;
+}
+
+ul.passion-list{
+  display: flex;
+  gap: 60px;
+  margin-top: 40px;
+}
+ul.passion-list li {
+  font-size: 18px;
+  font-weight: 300;
+  position: relative;
+}
+
+ul.passion-list li:not(:last-child)::after {
+  content: '';
+  position: absolute;
+  height: 1px;
+  width: 40px;
+  background: #ddd;
+  top: 15px;
+  right: -50px;
+}
+
+.xfolio-experience {
+  margin: 80px 0;
+}
+
+h4.section-title {
+  text-transform: uppercase;
+  font-size: 18px;
+  font-weight: 500;
+  color:#00000066;
 }
