--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -548,6 +548,24 @@ p.xfolio-subject {
         line-height: 30px;
         display: block;
     }
+
+	.welcome-text>h3 {
+		font-size: 40px;
+		font-weight: 300;
+		line-height: 48px;
+	}
+	.welcome-text>h1 {
+		font-size: 84px;
+		font-weight: 300;
+		margin-left: -9px !important;
+		margin-top: -24px !important;
+	}
+	.welcome-text h4 {
+        font-size: 22px;
+        line-height: 28px;
+        margin-left: -3px;
+        margin-top: -20px;
+    }
 }
 
 /* Responsive menu styles for screens 768px and below */
