--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -360,6 +360,7 @@ ul.passion-list{
   display: flex;
   gap: 60px;
   margin-top: 40px;
+  flex-wrap: wrap;
 }
 ul.passion-list li {
   font-size: 18px;
@@ -507,6 +508,10 @@ p.xfolio-subject {
 }
 
 @media (max-width: 768px) {
+	.main-wrapper {
+		max-width: 85%;
+		margin: 20px auto;
+	}
 	.menu-toggle {
         display: block;
         padding: 10px 0;
@@ -566,6 +571,50 @@ p.xfolio-subject {
         margin-left: -3px;
         margin-top: -20px;
     }
+
+	.xfolio-about-intro {
+		display: flex;
+		align-items: start;
+		flex-direction: column;
+	}
+	.about-text {
+		margin-top: -10px;
+		margin-left: -5px;
+	}
+	.about-text h1 {
+		text-transform: uppercase;
+		font-size: 56px;
+		font-weight: 400;
+		line-height: 56px;
+	}
+	.about-text h4 {
+		font-size: 18px;
+		
+	}
+	.xfolio-page-content {
+		display: none;
+	}
+	ul.passion-list {
+        gap: 20px; 
+        justify-content: start; 
+    }
+    
+    ul.passion-list li {
+        flex: 1 1 45%; 
+        text-align: left; 
+    }
+	ul.passion-list li:not(:last-child)::after {
+		content: '';
+		position: absolute;
+		height: 1px;
+		width: 40px;
+		background: #ddd;
+		top: 15px;
+		right: 50px;
+	}
+	ul.passion-list li:nth-child(2)::after {
+		content: none;
+	}
 }
 
 /* Responsive menu styles for screens 768px and below */
