--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -236,7 +236,7 @@ h1.xfolio-single-post-title {
 	justify-content: space-between;
 	align-items: center;
 	flex-wrap: wrap;
-	padding: 40px 0;
+	padding: 40px 0px;
 	border-top: 1px solid #000;
 }
 
@@ -356,19 +356,19 @@ h1.xfolio-single-post-title {
   max-width: 660px;
 }
 
-ul.passion-list{
+ul.passion-list-desktop{
   display: flex;
   gap: 60px;
   margin-top: 40px;
   flex-wrap: wrap;
 }
-ul.passion-list li {
+ul.passion-list-desktop li {
   font-size: 18px;
   font-weight: 300;
   position: relative;
 }
 
-ul.passion-list li:not(:last-child)::after {
+ul.passion-list-desktop li:not(:last-child)::after {
   content: '';
   position: absolute;
   height: 1px;
@@ -376,6 +376,10 @@ ul.passion-list li:not(:last-child)::after {
   background: #ddd;
   top: 15px;
   right: -50px;
+}
+
+.passion-list-responsive{
+	opacity: 0;
 }
 
 .xfolio-experience {
@@ -520,7 +524,7 @@ p.xfolio-subject {
     }
 	.xfolio-header {
 		position: fixed;
-		bottom: 20px;
+		bottom: 10px;
 		z-index: 999;
 		background-color: #fff;
 		width: 90%;
@@ -594,77 +598,59 @@ p.xfolio-subject {
 	.xfolio-page-content {
 		display: none;
 	}
-	ul.passion-list {
-        gap: 20px; 
-        justify-content: start; 
-    }
-    
-    ul.passion-list li {
-        flex: 1 1 45%; 
-        text-align: left; 
-    }
-	ul.passion-list li:not(:last-child)::after {
-		content: '';
-		position: absolute;
-		height: 1px;
-		width: 40px;
-		background: #ddd;
-		top: 15px;
-		right: 50px;
+	ul.passion-list-desktop{
+		display: none;
 	}
-	ul.passion-list li:nth-child(2)::after {
-		content: none;
+	.passion-list-responsive{
+		opacity: 1;
+		position: relative;
+		margin-top: 40px;
+	}
+	ul.passion-list-responsive li {
+		display: inline-block;
+		margin-right: 100px;
+	}
+
+	ul.passion-list-responsive li {
+		font-size: 18px;
+		font-weight: 300;
+		position: relative;
+	}
+	
+	li.third-passion {
+		margin-left: 90px;
+	}
+	  
+	ul.passion-list-responsive li:not(:first-child)::before {
+		content: '';
+        position: absolute;
+        height: 1px;
+        width: 70px;
+        background: #ddd;
+        top: 15px;
+        left: -85px;
+	  }
+
+	  h4.xfolio-section-title{
+		font-size: 14px;
+	  }
+	  h3.xfolio-institute-name{
+		font-size: 18px;
+	  }
+	  li.xfolio-course {
+		font-size: 15px;
+	}
+	.xfolio-single-academic ul {
+		gap: 10px;
+		flex-direction: column;
+	}
+	li.xfolio-course-duration::before {
+		display: none;
+	}
+	.contact-info, .xfolio-footer-social-share {
+		margin-top: -50px;
+	}
+	.xfolio-footer {
+		padding: 60px 40px;
 	}
 }
-
-/* Responsive menu styles for screens 768px and below */
-/* @media (max-width: 768px) {
-    .xfolio-header{
-		position: fixed;
-		bottom: 20px;
-		z-index: 999;
-		background-color: #fff;
-		width: 100%;
-	}
-    .exfolio-main-menu {
-        
-        width: 100%;
-        max-height: 0;
-        overflow: hidden;
-        background-color: #fff; 
-        transition: max-height 0.5s ease, opacity 0.5s ease;
-        z-index: 998;
-    }
-
-    
-    .menu-toggle {
-        display: block;	
-    }
-    
-    .exfolio-main-menu.active {
-        max-height: 300px; 
-        opacity: 1;
-		position: absolute;
-		bottom: 45px;
-		background-color: red;
-		width: 94%;
-    }
-
-   
-    #primary-menu {
-        display: flex;
-        flex-direction: column;
-        align-items: start;
-        padding: 5px 10px;
-    }
-
-    #primary-menu li {
-        margin: 10px 0;
-    }
-
-    #primary-menu a {
-        color: #000;
-        text-decoration: none;
-        font-size: 18px;
-    }
-} */
