--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -719,3 +719,30 @@ span.border-line {
 		padding: 60px 40px;
 	}
 }
+
+.xfolio-contact-form{
+	margin: 20px 0;
+}
+
+.xfolio-contact-form-area {
+    padding-bottom: 100px;
+}
+
+input.wpcf7-form-control.wpcf7-text.wpcf7-validates-as-required,
+textarea.wpcf7-form-control.wpcf7-textarea {
+    border: 1px solid #00000099;
+    width: 100%;
+    padding: 12px;
+	margin: 10px 0;
+	border-radius: 3px;
+}
+
+input.wpcf7-form-control.wpcf7-submit.has-spinner {
+    float: right;
+    padding: 12px 20px;
+    background: #000;
+    color: #fff;
+	font-size: 20px;
+	line-height: 30px;
+	cursor: pointer;
+}
